--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <head>
         <title>Grocery List</title>
         <link rel="stylesheet" type="text/css" href="styles.css" />
+        <div class="div3">
         <h1>A Particularly Well Crafted Grocery List</h1>
+        </div>
     </head>
     <body>
         <article>
+            <div class="div2">
             <h2>PANTRY ITEMS</h2>
+            </div>
             <section>
                 <div>
                     <h3>CANNED</h3>
@@ -32,8 +36,11 @@
                 </div>
             </section>
         </article>
+
         <article>
+            <div class="div2">
             <h2>FREEZER ITEMS</h2>
+            </div>
             <section>
                 <div>
                     <h3>VEGGIES</h3>
